feat: version system

--- a/content/docs/primitives/2.components/1.label/0.0.1.md
+++ b/content/docs/primitives/2.components/1.label/0.0.1.md
@@ -1,9 +1,18 @@
 ---
-title: Label
+title: Label (0.1.0)
 description: Renders an accessible label associated with controls.
 icon: i-ph-triangle-thin
+version: 0.0.1
+root: false
 ---
 
+
+::app-code-example
+#preview
+:package-label-demo
+#code
+codegen{src="components/package/label/Demo.vue" lang="vue"}
+::
 
 ## Installation
 
@@ -34,21 +43,10 @@ import Label from '@oku-ui/label'
 
 Contains the content for the label.
 
-::props-table
----
-data:
-- name: Root
-  required: false
-  type: 'boolean'
-  default: 'false'
-  description: 'Change the component to the HTML tag or custom component of the only child. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.' 
-
-- name: for
-  type: 'string'
-  description: 'The id of the element the label is associated with.'
----
-::
-
+| Name | Required | Type | Default | Description |
+| --- | --- | --- | --- | --- |
+| Root | false | boolean | false | Change the component to the HTML tag or custom component of the only child. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node. |
+| for | false | string |  | The id of the element the label is associated with. |
 
 ## Accessibility
 
