--- a/content/docs/primitives/2.components/1.label/0.0.1.md
+++ b/content/docs/primitives/2.components/1.label/0.0.1.md
@@ -1,5 +1,5 @@
 ---
-title: Label (0.1.0)
+title: Label (0.0.1)
 description: Renders an accessible label associated with controls.
 icon: i-ph-triangle-thin
 version: 0.0.1
@@ -13,6 +13,8 @@ root: false
 #code
 codegen{src="components/package/label/Demo.vue" lang="vue"}
 ::
+
+testing this is 0.0.1
 
 ## Installation
 
