--- a/content/docs/primitives/2.components/1.label.md
+++ b/content/docs/primitives/2.components/1.label.md
@@ -1,9 +1,7 @@
 ---
-title: Label (0.1.0)
+title: Label
 description: Renders an accessible label associated with controls.
 icon: i-ph-triangle-thin
-version: 0.1.0
-root: false
 ---
 
 
