style(table): some changes

--- a/content/docs/primitives/2.components/1.label.md
+++ b/content/docs/primitives/2.components/1.label.md
@@ -43,8 +43,8 @@ Contains the content for the label.
 
 | Name | Required | Type | Default | Description |
 | --- | --- | --- | --- | --- |
-| Root | false | boolean | false | Change the component to the HTML tag or custom component of the only child. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node. |
-| for | false | string |  | The id of the element the label is associated with. |
+| <div class="code">Root</div> | <div class="code">false</div> | <div class="code">boolean</div> | <div class="code">false</div> | Change the component to the HTML tag or custom component of the only child. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node. |
+| <div class="code">for</div> | <div class="code">false</div> | <div class="code">string</div> | <div class="code">false</div> | The id of the element the label is associated with. |
 
 ## Accessibility
 
