--- a/content/about/1.we.md
+++ b/content/about/1.we.md
@@ -4,7 +4,7 @@ description: Oku is a brand and community focused on Vue and Nuxt ecosystem.
 ---
 
 
-The name Oku means "read" in Turkish. This name is used to read the world, read life, read people, read code, read design, read anything. In Turkey, where I live, the phrase read is used a lot. Therefore, they used the name Oku. To show our respect for the library, science and knowledge. Also, our organization [@productdevbook](https://twitter.com/productdevbook) reads a lot of books. Therefore, the name Oku is versatile for her as well. The library and the book are his greatest passion.
+The name Oku means "read" in Turkish. This name is used to read the world, read life, read people, read code, read design, read anything. In Türkiye, where I live, the phrase read is used a lot. Therefore, they used the name Oku. To show our respect for the library, science and knowledge. Also, our organization [@productdevbook](https://twitter.com/productdevbook) reads a lot of books. Therefore, the name Oku is versatile for her as well. The library and the book are his greatest passion.
 
 Oku is a brand and community focused on the Vue and Nuxt markets. So, what wins the Oku?
 
