--- a/content/docs/primitives/2.components/1.label.md
+++ b/content/docs/primitives/2.components/1.label.md
@@ -17,7 +17,7 @@ codegen{src="components/package/label/Demo.vue" lang="vue"}
 Install the component from your command line.
 
 ```bash
-npm install @oku-ui/label
+pnpm install @oku-ui/label
 ```
 
 ## Anatomy
@@ -25,14 +25,18 @@ npm install @oku-ui/label
 Import the component.
 
 ```vue
+<script setup lang="ts">
 import Label from '@oku-ui/label'
+</script>
 
-<OkuLabel ref="labelRef"
- class="text-black text-2xl border-2 border-gray-500 mb-4"
- for="firstName"
->
-  Label
-</OkuLabel>
+<template>
+  <OkuLabel
+    class="text-black text-2xl border-2 border-gray-500 mb-4"
+    for="firstName"
+  >
+    Label
+  </OkuLabel>
+</template>
 ```
 
 ## API Reference
