--- a/content/docs/primitives/2.components/1.label.md
+++ b/content/docs/primitives/2.components/1.label.md
@@ -47,9 +47,8 @@ Contains the content for the label.
 
 | Name | Required | Type | Default | Description |
 | --- | --- | --- | --- | --- |
-| <div class="code">Root</div> | <div class="code">false</div> | <div class="code">boolean</div> | <div class="code">false</div> | Change the component to the HTML tag or custom component of the only child. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node. |
 | <div class="code">for</div> | <div class="code">false</div> | <div class="code">string</div> | <div class="code">false</div> | The id of the element the label is associated with. |
 
 ## Accessibility
 
-This component is based on the native `label` element, it will automatically apply the correct labelling when wrapping controls or using the `htmlFor` attribute. For your own custom controls to work correctly, ensure they use native elements such as `button` or `input` as a base.
+This component is based on the native `label` element, it will automatically apply the correct labelling when wrapping controls or using the `for` attribute. For your own custom controls to work correctly, ensure they use native elements such as `button` or `input` as a base.
