fix: aspect-ratio

--- a/content/docs/primitives/2.components/2.aspet-ratio.md
+++ b/content/docs/primitives/2.components/2.aspet-ratio.md
@@ -6,7 +6,7 @@ description: Displays content within a desired ratio.
 
 ::app-code-example
 #preview
-:package-aspet-ratio-demo
+:package-aspect-ratio-demo
 #code
 codegen{src="components/package/AspetRatio/Demo.vue" lang="vue"}
 ::
@@ -20,7 +20,7 @@ codegen{src="components/package/AspetRatio/Demo.vue" lang="vue"}
 Install the component from your command line.
 
 ```bash
-pnpm install @oku-ui/aspet-ratio
+pnpm install @oku-ui/aspect-ratio
 ```
 
 ## Anatomy
