fix: aspect typo

--- a/content/docs/primitives/2.components/2.aspet-ratio.md
+++ b/content/docs/primitives/2.components/2.aspet-ratio.md
@@ -29,7 +29,7 @@ Import the component.
 
 ```vue
 <script setup lang="ts">
-import Label from '@oku-ui/aspect-ratio'
+import { OkuAspectRatio } from '@oku-ui/aspect-ratio'
 </script>
 
 <template>
