--- a/olddocs/oku copy/1.about/4.configuration.md
+++ b/olddocs/oku copy/1.about/4.configuration.md
@@ -141,6 +141,6 @@ In this example, the image is located at `/public/img`.
 
 ```vue [components/Logo.vue]
 <template>
-  <img width="120" src="/img/YOURLOGO.png"/>
+  <img width="120" src="/img/YOURLOGO.png">
 </template>
 ```
