chore: update package

--- a/content/primitives/1.introduction/1.introduction.md
+++ b/content/primitives/1.introduction/1.introduction.md
@@ -4,6 +4,10 @@ description: With Oku, you get a wide range of features that can be easily integ
 root: true
 ---
 
+# Introduction
+
+With Oku, you get a wide range of features that can be easily integrated into your projects, including unstyled, accessible UI components, state management solutions, API integrations, and much more.
+
 
 Oku Primitives is a low-level UI component library with a focus on accessibility, customization and developer experience. You can use these components either as the base layer of your design system, or adopt them incrementally.
 
@@ -71,7 +75,7 @@ To get involved with the Oku community, ask questions, and share tips, join our 
 
 To receive updates on new primitives, announcements, blog posts, and general Oku tips, follow along on Twitter.
 
-[Follow Radix on Twitter](https://twitter.com/oku_ui)
+[Follow Oku on Twitter](https://twitter.com/oku_ui)
 
 ### GitHub
 
