--- a/content/primitives/0.index.md
+++ b/content/primitives/0.index.md
@@ -12,10 +12,10 @@ main:
 ---
 cta:
   - Get started
-  - /primitives/introduction/getting-started
+  - /primitives/introduction/introduction
 secondary:
   - Open on GitHub →
-  - https://github.com/nuxt-themes/docus
+  - https://github.com/oku-ui/primitives
 ---
 
 #title
@@ -38,10 +38,9 @@ Unstyled, accessible components for building high‑quality design systems and w
   ::terminal
   ---
   content:
-  - npx nuxi@latest init -t themes/docus
-  - cd docs
-  - npm install
-  - npm run dev
+  - pnpm install @oku-ui/${component-name}
+  - npm install @oku-ui/${component-name}
+  - yarn add @oku-ui/${component-name}
   ---
   ::
 ::
