docs: fix some broken links in documentation

--- a/content/primitives/0.index.md
+++ b/content/primitives/0.index.md
@@ -30,8 +30,8 @@ Unstyled, accessible components for building high‑quality design systems and w
   ::list
   - **+7 Components** ready to build rich pages
   - **Docs** and **Test** structures for each component
-  - [Vue 3](https://vuejs.org) and [Nuxt 3](https://nuxtjs.org) ready
-  - Inspired by [Radix Primitives](https://radix-ui.com/primitives/docs/primitives). Big praise to the Radix team!
+  - [Vue 3](https://vuejs.org) and [Nuxt 3](https://nuxt.com) ready
+  - Inspired by [Radix Primitives](https://www.radix-ui.com/docs/primitives). Big praise to the Radix team!
   ::
 
 #support
