--- a/content/primitives/1.introduction/2.nuxt.md
+++ b/content/primitives/1.introduction/2.nuxt.md
@@ -5,7 +5,7 @@ datePublished: 2022-12-07
 dateModified: 2022-12-07
 readingTime: 3
 version: 0.1.0
-image: 'https://oku-ui.com/og/nuxt-primitives.jpg'
+image: 'https://oku-ui.com/og/oku-primitives-nuxt.jpg'
 ---
 
 # Nuxt Module
@@ -19,7 +19,7 @@ Oku Primitives Nuxt module
 ## Installation
 
 ```bash
-pnpm install @oku-ui/nuxt-primitives
+pnpm install @oku-ui/primitives-nuxt
 ```
 
 ## Usage
@@ -29,7 +29,7 @@ Add `@oku-ui/nuxt` to the `modules` section of `nuxt.config.js`.
 ```ts
 export default {
   modules: [
-    '@oku-ui/nuxt-primitives'
+    '@oku-ui/primitives-nuxt'
   ],
 }
 ```
