fix: nuxt module typo

--- a/content/primitives/1.introduction/2.nuxt.md
+++ b/content/primitives/1.introduction/2.nuxt.md
@@ -24,7 +24,7 @@ pnpm install @oku-ui/primitives-nuxt
 
 ## Usage
 
-Add `@oku-ui/nuxt` to the `modules` section of `nuxt.config.js`.
+Add `@oku-ui/primitives-nuxt` to the `modules` section of `nuxt.config.js`.
 
 ```ts
 export default {
@@ -39,7 +39,7 @@ export default {
 ```ts
 export default {
   modules: [
-    '@oku-ui/nuxt-primitives'
+    '@oku-ui/primitives-nuxt'
   ],
   primitives: {
     // All components install
