chore: improve nuxt module docs

--- a/content/primitives/1.introduction/2.nuxt.md
+++ b/content/primitives/1.introduction/2.nuxt.md
@@ -19,12 +19,14 @@ Oku Primitives Nuxt module
 ## Installation
 
 ```bash
-pnpm install @oku-ui/primitives-nuxt
+pnpm i -D @oku-ui/primitives-nuxt // with pnpm
+npm i -D @oku-ui/primitives-nuxt // with npm
+yarn add -D @oku-ui/primitives-nuxt // with yarn
 ```
 
 ## Usage
 
-Add `@oku-ui/primitives-nuxt` to the `modules` section of `nuxt.config.js`.
+Add `@oku-ui/primitives-nuxt` to the `modules` section of `nuxt.config.js|ts`.
 
 ```ts
 export default {
@@ -39,7 +41,13 @@ export default {
 ```ts
 export default {
   modules: [
-    '@oku-ui/primitives-nuxt'
+    [
+      '@oku-ui/primitives-nuxt',
+      {
+        // All components install
+        installComponents: true
+      }
+    ]
   ],
   primitives: {
     // All components install
