--- a/content/primitives/1.getting-started/1.index.md
+++ b/content/primitives/1.getting-started/1.index.md
@@ -8,18 +8,70 @@ head:
 
 This module is inspired by the [Resend](https://resend.com/) team's [React Email](https://react.email/docs/introduction) library, its goal is to provide everything related to Building and sending emails using Vue. This includes components, render utilities.
 
-## Getting Started
+# Introduction
 
-Vue Email is designed to be incrementally adopted, so you can add it to most codebases that support vue in a few minutes.
+With Oku, you get a wide range of features that can be easily integrated into your projects, including unstyled, accessible UI components, state management solutions, API integrations, and much more.
 
+
+Oku Primitives is a low-level UI component library with a focus on accessibility, customization and developer experience. You can use these components either as the base layer of your design system, or adopt them incrementally.
+
+## Acknowledgement
+
+A big thank you to the developers of [Radix Primitives](https://www.radix-ui.com/). Their amazing work made it possible for me to create this port to Vue 3 - without them there is no Oku Primitives.
+
+
+## Vision
+
+Most of us share similar definitions for common UI patterns like accordion, checkbox,
+combobox, dialog, dropdown, select, slider, and tooltip. These UI patterns are [documented by WAI-ARIA](https://www.w3.org/TR/wai-aria-practices/#aria_ex) and generally understood by the community.
+
+However, the implementations provided to us by the web platform are inadequate. They're
+either non-existent, lacking in functionality, or cannot be customized sufficiently.
+
+So, developers are forced to build custom components; an incredibly difficult task. As a
+result, most components on the web are inaccessible, non-performant, and lacking important
+features.
+
+Our goal is to create a well-funded, open-source component library that the community can
+use to build accessible design systems.
+
+## Key Features
+
+### Accessible
+
+Components adhere to the [WAI-ARIA design patterns](https://www.w3.org/TR/wai-aria-practices-1.2) where possible. We handle many of the difficult implementation details related to accessibility, including aria and role attributes, focus management, and keyboard navigation. Learn more in our [accessibility](/docs/primitives/overview/accessibility) overview.
+
+### Unstyled
+
+Components ship with zero styles, giving you complete control over styling. Components can be styled with any styling solution (vanilla CSS, CSS preprocessors, CSS-in-JS libraries). Learn more in our [styling](./styling) guide.
+
+### Opened
+
+Radix Primitives are designed to be customized to suit your needs. Our open component architecture provides you granular access to each component part, so you can wrap them and add your own event listeners, props, or refs.
+
+### Uncontrolled
+
+Where applicable, components are uncontrolled by default but can also be controlled, alternatively. All of the behavior wiring is handled internally, so you can get up and running as smoothly as possible, without needing to create any local states.
+
+### Developer experience
+
+One of our main goals is to provide the best possible developer experience. Oku Primitives provides a fully-typed API. All components share a similar API, creating a consistent and predictable experience. We've also implemented an `asChild` prop, giving users full control over the rendered element.
+
+### Incremental adoption
+
+Each primitive can be installed individually so you can adopt them incrementally.
 
 ::custom-link
 ---
 items:
   - title: 'Installation'
     icon: 'i-ph-hammer-bold'
-    to: '/getting-started/installation'
+    to: '/primitives/getting-started/installation'
     description: 'Learn how to install VueEmail in your project.'
+  - title: 'Nuxt Module'
+    icon: 'i-ph-hammer-bold'
+    to: '/primitives/getting-started/nuxt-module'
+    description: 'Learn how to install VueEmail in your Nuxt project.'
 
 ---
 ::
@@ -32,53 +84,84 @@ This is a set of standard components to help you build amazing emails without ha
 ::custom-link
 ---
 items:
-  - title: 'HTML'
+  - title: 'AspectRatio'
     icon: 'i-ph-file-code-bold'
-    to: '/components/html'
-    description: 'A Vue html component to wrap your email content.'
-  - title: 'Container'
-    icon: 'i-ph-grid-nine-bold'
-    to: '/components/container'
-    description: 'The main wrapper that hold your content.'
-  - title: 'Button'
-    icon: 'i-ph-text-b-bold'
-    to: '/components/button'
-    description: 'A Vue button component to help build emails.'
-  - title: 'Text'
-    icon: 'i-ph-text-aa-bold'
-    to: '/components/text'
-    description: 'A block of text seeprated by blank spaces.'
+    to: '/primitives/components/aspect-ratio'
+    description: 'Displays content within a desired ratio.'
+  - title: 'Avatar'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/avatar'
+    description: 'An image element with a fallback for representing the user.'
+  - title: 'Checkbox'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/checkbox'
+    description: 'Renders an accessible checkbox associated with controls.'
+  - title: 'Collapsible'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/collapsible'
+    description: 'An interactive component which expands/collapses a panel.'
+  - title: 'Dialog'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/dialog'
+    description: 'A window overlaid on either the primary window or another dialog window, rendering the content underneath inert.'
+  - title: 'HoverCard'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/hover-card'
+    description: 'For sighted users to preview content available behind a link.'
+  - title: 'Label'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/label'
+    description: 'Renders an accessible label associated with controls.'
+  - title: 'Popover'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/popover'
+    description: 'A non-modal dialog that floats around a trigger element.'
+  - title: 'Progress'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/progress'
+    description: 'Displays an indicator showing the completion progress of a task, typically displayed as a progress bar.'
+  - title: 'RadioGroup'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/radio-group'
+    description: 'A set of checkable buttons—known as radio buttons—where no more than one of the buttons can be checked at a time.'
+  - title: 'Separator'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/separator'
+    description: 'Visually or semantically separates content.'
+  - title: 'Slider'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/slider'
+    description: 'An input where the user selects a value from within a given range.'
+  - title: 'Switch'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/switch'
+    description: 'A control that allows the user to toggle between checked and not checked.'
+  - title: 'Tabs'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/tabs'
+    description: 'A set of layered sections of content—known as tab panels—that are displayed one at a time.'
+  - title: 'Toast'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/toast'
+    description: 'A non-modal dialog that floats around a trigger element.'
+  - title: 'ToggleGroup'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/toggle-group'
+    description: 'A set of two-state buttons that can be toggled on or off.'
+  - title: 'Toggle'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/toggle'
+    description: 'A two-state button that can be either on or off.'
+  - title: 'Toolbar'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/toolbar'
+    description: 'A container for grouping a set of controls, such as buttons, toggle groups or dropdown menus.'
+  - title: 'Tooltip'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/tooltip'
+    description: 'A popup that displays information related to an element when the element receives keyboard focus or the mouse hovers over it.'
 ---
 ::
-
-## Integrations
-
-In order to use Vue Email with any email service provider, you’ll need to convert the components made with Vue into a HTML string. This is done using the [render](/utilities/render) utility.
-
-::custom-link
----
-items:
-  - title: 'Resend'
-    to: '/integrations/resend'
-    description: 'Send email using Resend.'
-  - title: 'Nodemailer'
-    to: '/integrations/nodemailer'
-    description: 'Send email using Nodemailer.'
-  - title: 'Sendgrid'
-    to: '/integrations/sendgrid'
-    description: 'Send email using Sendgrid.'
-  - title: 'Postmark'
-    to: '/integrations/postmark'
-    description: 'Send email using Postmark.'
-  - title: 'AWS SES'
-    to: '/integrations/aws-ses'
-    description: 'Send email using AWS SES.'
-  - title: 'MailerSend'
-    to: '/integrations/mailersend'
-    description: 'Send email using MailerSend.'
----
-::
-
 
 ## Features
 
@@ -91,4 +174,32 @@ items:
 
 ## Credits
 
-- [react-email](https://github.com/resendlabs/react-email)
+- [Radix Primitives](https://radix-ui.com/)
+- [Daniel Roe](https://github.com/danielroe)
+- [Johnson Chu](https://github.com/johnsoncodehk)
+- [Headless UI](https://headlessui.com/)
+- [Element Plus](https://github.com/element-plus/element-plus)
+- [Skirtle](https://github.com/skirtles-code)
+- [Jacek Karczmarczyk](https://github.com/jacekkarczmarczyk)
+
+## Community
+
+### Discord
+
+To get involved with the Oku community, ask questions, and share tips, join our Discord.
+
+[Join our Discord](https://chat.productdevbook.com)
+
+### Twitter
+
+To receive updates on new primitives, announcements, blog posts, and general Oku tips, follow along on Twitter.
+
+[Follow Oku on Twitter](https://twitter.com/oku_ui)
+
+### GitHub
+
+To file issues, request features, and contribute, check out our GitHub.
+
+[GitHub repo](https://github.com/oku-ui/primitives)
+
+[Code of conduct](https://github.com/oku-ui/primitives/blob/main/CODE_OF_CONDUCT.md)
