--- a/content/primitives/1.getting-started/1.index.md
+++ b/content/primitives/1.getting-started/1.index.md
@@ -1,12 +1,10 @@
 ---
 title: Introduction
-description: 'Build and send emails using Vue.'
+description: 'Build and customize accessible UI components for your design system.'
 head:
-  title: 'VueEmail: Build and send emails using Vue'
-  description: 'It provides everything related to Building and sending emails using Vue. This includes components, render utilities.'
+  title: 'Oku Primitives'
+  description: 'Unstyled, accessible components for building high‑quality design systems and web apps in React.Unstyled, accessible components for building high‑quality design systems and web apps in Vue.'
 ---
-
-This module is inspired by the [Resend](https://resend.com/) team's [React Email](https://react.email/docs/introduction) library, its goal is to provide everything related to Building and sending emails using Vue. This includes components, render utilities.
 
 # Introduction
 
@@ -67,19 +65,18 @@ items:
   - title: 'Installation'
     icon: 'i-ph-hammer-bold'
     to: '/primitives/getting-started/installation'
-    description: 'Learn how to install VueEmail in your project.'
+    description: 'Learn how to install Primitives in your project.'
   - title: 'Nuxt Module'
     icon: 'i-ph-hammer-bold'
     to: '/primitives/getting-started/nuxt-module'
-    description: 'Learn how to install VueEmail in your Nuxt project.'
+    description: 'Learn how to install Primitives in your Nuxt project.'
 
 ---
 ::
 
 ## Components
 
-This is a set of standard components to help you build amazing emails without having to deal with the mess of creating table-based layouts and maintaining archaic markup.
-
+The following components are available:
 
 ::custom-link
 ---
@@ -165,12 +162,11 @@ items:
 
 ## Features
 
-- Build email templates with Vue components
-- Integrates with many email providers
-- Tested against popular email clients
 - Supports Tailwind CSS
 - First-class support for Nuxt 3
+- First-class support for Vue 3
 - Fully typed
+- Volar support
 
 ## Credits
 
