fix: index add new components

--- a/content/primitives/1.getting-started/1.index.md
+++ b/content/primitives/1.getting-started/1.index.md
@@ -81,6 +81,14 @@ The following components are available:
 ::custom-link
 ---
 items:
+  - title: 'Accordion'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/accordion'
+    description: 'A vertical stack of interactive headings used to toggle the visibility of their associated content.'
+  - title: 'Alert Dialog'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/alert-dialog'
+    description: 'A modal dialog that interrupts the user’s workflow to communicate an important message and acquire a response.'
   - title: 'AspectRatio'
     icon: 'i-ph-file-code-bold'
     to: '/primitives/components/aspect-ratio'
@@ -121,6 +129,10 @@ items:
     icon: 'i-ph-file-code-bold'
     to: '/primitives/components/radio-group'
     description: 'A set of checkable buttons—known as radio buttons—where no more than one of the buttons can be checked at a time.'
+  - title: 'Scroll Area'
+    icon: 'i-ph-file-code-bold'
+    to: '/primitives/components/scroll-area'
+    description: 'A scrollable area with hidden scrollbars.'
   - title: 'Separator'
     icon: 'i-ph-file-code-bold'
     to: '/primitives/components/separator'
