chore: update docs

--- a/content/pergel/1.getting-started/1.index.md
+++ b/content/pergel/1.getting-started/1.index.md
@@ -8,7 +8,13 @@ head:
 
 # Introduction
 
-....
+The beginning of every new project in the software world is determined by the steps taken with care and success depends on taking these steps with great care. With this belief, we set out to offer unique and functional solutions in the software world and named our journey "Pergel".
+
+(/pergel/, compass in Turkish)
+
+
+- [Pergel Github Repository](https://github.com/oku-ui/pergel)
+
 
 ::custom-link
 ---
@@ -17,24 +23,23 @@ items:
     icon: 'i-ph-hammer-bold'
     to: '/primitives/getting-started/installation'
     description: 'Learn how to install Primitives in your project.'
-  - title: 'Nuxt Module'
-    icon: 'i-ph-hammer-bold'
-    to: '/primitives/getting-started/nuxt-module'
-    description: 'Learn how to install Primitives in your Nuxt project.'
-
 ---
 ::
 
-## Components
+## Operating system 
 
-The following components are available:
+The operating system is a collection of the basic instructions that tell the electronic parts of the computer what to do and how to work. Free, open source, and secure.
 
 ::custom-link
 ---
 items:
-  - title: 'Accordion'
-    icon: 'i-ph-file-code-bold'
-    to: '/pergel/node'
+  - title: 'Linux'
+    icon: 'i-logos-linux-tux'
+    to: '/pergel/os/linux'
+    description: 'A vertical stack of interactive headings used to toggle the visibility of their associated content.'
+  - title: 'MacOS'
+    icon: 'i-logos-apple'
+    to: '/pergel/os/macos'
     description: 'A vertical stack of interactive headings used to toggle the visibility of their associated content.'
 ---
 ::
@@ -42,13 +47,7 @@ items:
 
 ## Credits
 
-- [Radix Primitives](https://radix-ui.com/)
-- [Daniel Roe](https://github.com/danielroe)
-- [Johnson Chu](https://github.com/johnsoncodehk)
-- [Headless UI](https://headlessui.com/)
-- [Element Plus](https://github.com/element-plus/element-plus)
-- [Skirtle](https://github.com/skirtles-code)
-- [Jacek Karczmarczyk](https://github.com/jacekkarczmarczyk)
+- 
 
 ## Community
 
@@ -68,6 +67,6 @@ To receive updates on new primitives, announcements, blog posts, and general Oku
 
 To file issues, request features, and contribute, check out our GitHub.
 
-[GitHub repo](https://github.com/oku-ui/primitives)
+[GitHub repo](https://github.com/oku-ui/pergel)
 
-[Code of conduct](https://github.com/oku-ui/primitives/blob/main/CODE_OF_CONDUCT.md)
+[Code of conduct](https://github.com/oku-ui/pergel/blob/main/CODE_OF_CONDUCT.md)
