feat: pergel install

--- a/content/pergel/1.getting-started/1.index.md
+++ b/content/pergel/1.getting-started/1.index.md
@@ -15,6 +15,35 @@ The beginning of every new project in the software world is determined by the st
 
 - [Pergel Github Repository](https://github.com/oku-ui/pergel)
 
+# Installation
+
+
+::code-group
+
+```sh [pnpm]
+pnpm i -g pergel
+```
+
+```bash [yarn]
+yarn add -g pergel
+
+```
+
+```bash [npm]
+npm install -g pergel
+```
+
+::
+
+## Upgrade
+
+::code-group
+
+```sh [sh]
+pergel upgrade
+```
+::
+
 
 ::custom-link
 ---
