--- a/content/pergel/1.getting-started/1.index.md
+++ b/content/pergel/1.getting-started/1.index.md
@@ -15,7 +15,37 @@ The beginning of every new project in the software world is determined by the st
 
 - [Pergel Github Repository](https://github.com/oku-ui/pergel)
 
-# Installation
+# Prerequisites
+
+Before installing Pergel on linux or macOS, you must make sure you’ve downloaded all required installation files and elements.
+
+To install Pergel you just need to install curl.
+
+## Install Curl
+
+[Curl](os/programs/curl) comes installed on both Ubuntu (or other Debian-based distributions) and macOS. However, if you need to check if it is installed, you can verify by running `curl --version`.
+
+If you do not have curl installed, you can install it using the following command:
+
+::code-group
+
+```sh [linux]
+sudo apt update
+sudo apt install curl
+```
+
+```sh [macos]
+brew install curl
+
+```
+::
+
+When finished, curl should be successfully installed. You can verify by running `curl --version` again.
+
+> If homebrew is not installed for macOS, you can install it using the command below:
+
+
+# How to Install Pergel
 
 
 ::code-group
