chore: added homebrew installation

--- a/content/pergel/1.getting-started/1.index.md
+++ b/content/pergel/1.getting-started/1.index.md
@@ -34,7 +34,7 @@ sudo apt update
 sudo apt install curl
 ```
 
-```sh [macos]
+```sh [macOS]
 brew install curl
 
 ```
@@ -44,9 +44,16 @@ When finished, curl should be successfully installed. You can verify by running 
 
 > If homebrew is not installed for macOS, you can install it using the command below:
 
+::code-group
+
+```sh [macOS]
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+```
+::
+
+---
 
 # How to Install Pergel
-
 
 ::code-group
 
@@ -62,7 +69,6 @@ yarn add -g pergel
 ```bash [npm]
 npm install -g pergel
 ```
-
 ::
 
 ## Upgrade
