chore: pergel installation methods

--- a/content/pergel/1.getting-started/1.index.md
+++ b/content/pergel/1.getting-started/1.index.md
@@ -55,6 +55,25 @@ When finished, curl should be successfully installed. You can verify by running 
 
 # How to Install Pergel
 
+There are 2 options to install Pergel. One with curl and the other with package management tools.
+
+### Method 1: Install with Curl
+
+::code-group
+
+```sh [linux]
+curl -sSL https://raw.githubusercontent.com/oku-ui/pergel/main/install/ubuntu.sh | sh
+```
+
+```bash [macOS]
+curl -sSL https://raw.githubusercontent.com/oku-ui/pergel/main/install/ubuntu.sh | sh
+
+```
+::
+
+
+### Method 2: Install with Package Manager
+
 ::code-group
 
 ```sh [pnpm]
