--- a/content/pergel/1.getting-started/1.index.md
+++ b/content/pergel/1.getting-started/1.index.md
@@ -66,7 +66,7 @@ curl -sSL https://raw.githubusercontent.com/oku-ui/pergel/main/install/ubuntu.sh
 ```
 
 ```bash [macOS]
-curl -sSL https://raw.githubusercontent.com/oku-ui/pergel/main/install/ubuntu.sh | sh
+soon
 
 ```
 ::
