chore: update pergel introduction (#89)
* chore: update pergel introduction

* chore: added homebrew installation

* chore: pergel installation methods

* Update content/pergel/1.getting-started/1.index.md

--- a/content/pergel/1.getting-started/1.index.md
+++ b/content/pergel/1.getting-started/1.index.md
@@ -15,8 +15,64 @@ The beginning of every new project in the software world is determined by the st
 
 - [Pergel Github Repository](https://github.com/oku-ui/pergel)
 
-# Installation
+# Prerequisites
 
+Before installing Pergel on linux or macOS, you must make sure you’ve downloaded all required installation files and elements.
+
+To install Pergel you just need to install curl.
+
+## Install Curl
+
+[Curl](os/programs/curl) comes installed on both Ubuntu (or other Debian-based distributions) and macOS. However, if you need to check if it is installed, you can verify by running `curl --version`.
+
+If you do not have curl installed, you can install it using the following command:
+
+::code-group
+
+```sh [linux]
+sudo apt update
+sudo apt install curl
+```
+
+```sh [macOS]
+brew install curl
+
+```
+::
+
+When finished, curl should be successfully installed. You can verify by running `curl --version` again.
+
+> If homebrew is not installed for macOS, you can install it using the command below:
+
+::code-group
+
+```sh [macOS]
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+```
+::
+
+---
+
+# How to Install Pergel
+
+There are 2 options to install Pergel. One with curl and the other with package management tools.
+
+### Method 1: Install with Curl
+
+::code-group
+
+```sh [linux]
+curl -sSL https://raw.githubusercontent.com/oku-ui/pergel/main/install/ubuntu.sh | sh
+```
+
+```bash [macOS]
+soon
+
+```
+::
+
+
+### Method 2: Install with Package Manager
 
 ::code-group
 
@@ -32,7 +88,6 @@ yarn add -g pergel
 ```bash [npm]
 npm install -g pergel
 ```
-
 ::
 
 ## Upgrade
